voting-app-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: example-voting-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: "subnet-08c1afcaa1f18ab99, subnet-0b72b1546b3106d25, subnet-0419600404fdffb80"
    alb.ingress.kubernetes.io/healthcheck-path: "/"
    
spec:
  rules:
    - http:
        paths:
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
